test_debug3.txt
   Compiling auto-lang v0.1.0 (D:\autostack\auto-lang\crates\auto-lang)
warning: unused imports: `ApiField` and `ApiParam`
 --> crates\auto-lang\src\api\targets\typescript.rs:5:31
  |
5 | use crate::api::{ApiEndpoint, ApiField, ApiModule, ApiParam, ApiType};
  |                               ^^^^^^^^             ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ApiParam`
 --> crates\auto-lang\src\api\targets\tauri.rs:5:42
  |
5 | use crate::api::{ApiEndpoint, ApiModule, ApiParam};
  |                                          ^^^^^^^^

warning: unused import: `std::collections::HashMap`
  --> crates\auto-lang\src\api\mod.rs:40:5
   |
40 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `auto_val::AutoStr`
 --> crates\auto-lang\src\ast\ui.rs:8:5
  |
8 | use auto_val::AutoStr;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `ClassBindingEntry`
  --> crates\auto-lang\src\aura\extract.rs:13:18
   |
13 | use crate::ast::{ClassBindingEntry, Expr, Stmt, Type, Key, ViewPropValue};
   |                  ^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
 --> crates\auto-lang\src\aura\atom.rs:8:5
  |
8 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `AuraStateDef`
   --> crates\auto-lang\src\ui_gen\vue.rs:107:76
    |
107 | use crate::aura::{AuraBinOp, AuraEvent, AuraExpr, AuraNode, AuraPropValue, AuraStateDef, AuraStmt, AuraTextContent, AuraUnaryOp, AuraWidg...
    |                                                                            ^^^^^^^^^^^^

warning: unused import: `GenError`
  --> crates\auto-lang\src\ui_gen\rust.rs:57:31
   |
57 | use super::{BackendGenerator, GenError, GenResult};
   |                               ^^^^^^^^

warning: unused imports: `AuraMessage` and `AuraStateDef`
  --> crates\auto-lang\src\ui_gen\rust.rs:58:40
   |
58 | use crate::aura::{AuraEvent, AuraExpr, AuraMessage, AuraMsgVariant, AuraNode, AuraPropValue, AuraStateDef, AuraStmt, AuraTextContent, Aur...
   |                                        ^^^^^^^^^^^                                           ^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
  --> crates\auto-lang\src\ui_gen\rust.rs:59:5
   |
59 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::fmt`
 --> crates\auto-lang\src\autodown\error.rs:5:5
  |
5 | use std::fmt;
  |     ^^^^^^^^

warning: unused imports: `AdocBlock`, `AdocInline`, and `AdocMath`
  --> crates\auto-lang\src\autodown\lexer.rs:10:18
   |
10 | use super::ast::{AdocBlock, AdocInline, AdocMath};
   |                  ^^^^^^^^^  ^^^^^^^^^^  ^^^^^^^^

warning: unused import: `super::super::math::AutoMathParser`
 --> crates\auto-lang\src\autodown\trans\typst.rs:7:5
  |
7 | use super::super::math::AutoMathParser;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `AdocError`
  --> crates\auto-lang\src\autodown\trans\mod.rs:11:20
   |
11 | use super::error::{AdocError, AdocResult};
   |                    ^^^^^^^^^

warning: unused import: `std::collections::HashMap`
  --> crates\auto-lang\src\autodown\trans\mod.rs:12:5
   |
12 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `AdocError`
 --> crates\auto-lang\src\autodown\math.rs:6:20
  |
6 | use super::error::{AdocError, AdocResult};
  |                    ^^^^^^^^^

warning: unused doc comment
   --> crates\auto-lang\src\vm\ffi\stdlib.rs:697:1
    |
697 | /// Thread-local storage for TCP listeners
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ rustdoc does not generate documentation for macro invocations
    |
    = help: to document an item produced by a macro, the macro must produce the documentation as part of its expansion
    = note: `#[warn(unused_doc_comments)]` (part of `#[warn(unused)]`) on by default

warning: unused doc comment
   --> crates\auto-lang\src\vm\ffi\stdlib.rs:976:1
    |
976 | /// HTTP Response data stored in thread-local
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ rustdoc does not generate documentation for macro invocations
    |
    = help: to document an item produced by a macro, the macro must produce the documentation as part of its expansion

warning: unused imports: `Arc` and `Mutex`
  --> crates\auto-lang\src\vm\ffi\stdlib.rs:15:17
   |
15 | use std::sync::{Arc, Mutex};
   |                 ^^^  ^^^^^

warning: unused imports: `ValueKey` and `VmRef`
  --> crates\auto-lang\src\lib.rs:95:51
   |
95 | use auto_val::{AutoPath, Obj, Value, Node, Array, ValueKey, VmRef};
   |                                                   ^^^^^^^^  ^^^^^

warning: unused import: `Scenario`
    --> crates\auto-lang\src\lib.rs:1022:43
     |
1022 |     use crate::session::{CompilerSession, Scenario};
     |                                           ^^^^^^^^

error[E0308]: mismatched types
    --> crates\auto-lang\src\vm\engine.rs:530:45
     |
 530 |                         node.args.args.push(auto_val::Value::from(arg));
     |                                        ---- ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Arg`, found `Value`
     |                                        |
     |                                        arguments to this method are incorrect
     |
note: method defined here
    --> C:\Users\zhaop\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\alloc\src\vec\mod.rs:2571:12
     |
2571 |     pub fn push(&mut self, value: T) {
     |            ^^^^
help: try wrapping the expression in `auto_val::Arg::Pos`
     |
 530 |                         node.args.args.push(auto_val::Arg::Pos(auto_val::Value::from(arg)));
     |                                             +++++++++++++++++++                          +

error[E0599]: no method named `starts_with` found for reference `&ValueKey` in the current scope
   --> crates\auto-lang\src\lib.rs:696:30
    |
696 |                         if k.starts_with("_expr") {
    |                              ^^^^^^^^^^^ method not found in `&ValueKey`

error[E0616]: field `kids` of struct `auto_val::Node` is private
   --> crates\auto-lang\src\lib.rs:698:38
    |
698 | ...                   root.kids.push(n.clone());
    |                            ^^^^ private field

warning: unused variable: `i`
   --> crates\auto-lang\src\api\targets\typescript.rs:126:14
    |
126 |         for (i, endpoint) in endpoints.iter().enumerate() {
    |              ^
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
help: if this is intentional, prefix it with an underscore
    |
126 |         for (_i, endpoint) in endpoints.iter().enumerate() {
    |              +
help: you might have meant to pattern match on the similarly named constant `MAX_SUGGESTIONS`
    |
126 |         for (infer::errors::MAX_SUGGESTIONS, endpoint) in endpoints.iter().enumerate() {
    |               +++++++++++++++++++++++++++++

warning: unused variable: `view`
   --> crates\auto-lang\src\ast.rs:254:29
    |
254 |             Stmt::ViewBlock(view) => write!(f, "(view)"),
    |                             ^^^^ help: if this is intentional, prefix it with an underscore: `_view`

warning: variable does not need to be mutable
   --> crates\auto-lang\src\aura\extract.rs:305:17
    |
305 |             let mut children = Vec::new();
    |                 ----^^^^^^^^
    |                 |
    |                 help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `options`
  --> crates\auto-lang\src\aura\schema.rs:81:29
   |
81 |             PropType::OneOf(options) => {
   |                             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_options`

warning: unused variable: `tag`
   --> crates\auto-lang\src\aura\validate.rs:391:47
    |
391 |             ValidationError::UnknownElement { tag, suggestion, .. } => {
    |                                               ^^^-
    |                                               |
    |                                               help: try removing the field

warning: unused variable: `params_str`
    --> crates\auto-lang\src\ui_gen\vue.rs:1857:25
     |
1857 |                     let params_str = if event.params.is_empty() {
     |                         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_params_str`

warning: unused variable: `bindings`
    --> crates\auto-lang\src\ui_gen\vue.rs:1890:63
     |
1890 |                     AuraTextContent::Interpolated { template, bindings } => {
     |                                                               ^^^^^^^^ help: try ignoring the field: `bindings: _`

warning: unused variable: `tag`
    --> crates\auto-lang\src\ui_gen\vue.rs:5193:18
     |
5193 |             for (tag, (module, components)) in &self.shadcn_registry.components {
     |                  ^^^ help: if this is intentional, prefix it with an underscore: `_tag`

warning: unused variable: `delim`
   --> crates\auto-lang\src\autodown\lexer.rs:514:17
    |
514 |             let delim = self.peek().unwrap();
    |                 ^^^^^ help: if this is intentional, prefix it with an underscore: `_delim`

Some errors have detailed explanations: E0308, E0599, E0616.
For more information about an error, try `rustc --explain E0308`.
warning: `auto-lang` (lib) generated 30 warnings
error: could not compile `auto-lang` (lib) due to 3 previous errors; 30 warnings emitted
